gateway1.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-https
spec:
  gatewayClassName: gke-l7-rilb
  addresses:
  - type: IPAddress
    value: 10.1.2.37
  listeners:
  - protocol: HTTPS
    port: 443
    routes:
      kind: HTTPRoute
      namespaces:
        from: "All"
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: hostname1-certificate, hostname2-certificate
